# rust-web-benchmarks

./: .gitignore  LICENSE  README.md
bench-bot/: Cargo.toml  README.md
bench-bot/src/: main.rs  markdown.rs  report.rs
benchmark/: Cargo.toml
benchmark/hello-world/actix-web/: Cargo.toml
benchmark/hello-world/actix-web/src/: main.rs
benchmark/hello-world/astra/: Cargo.toml
benchmark/hello-world/astra/src/: main.rs
benchmark/hello-world/axum/: Cargo.toml
benchmark/hello-world/axum/src/: main.rs
benchmark/hello-world/graphul/: Cargo.toml
benchmark/hello-world/graphul/src/: main.rs
benchmark/hello-world/hyper/: Cargo.toml
benchmark/hello-world/hyper/src/: main.rs
benchmark/hello-world/ntex/: Cargo.toml
benchmark/hello-world/ntex/src/: main.rs
benchmark/hello-world/poem/: Cargo.toml
benchmark/hello-world/poem/src/: main.rs
benchmark/hello-world/rocket/: Cargo.toml  Rocket.toml
benchmark/hello-world/rocket/src/: main.rs
benchmark/hello-world/salvo/: Cargo.toml
benchmark/hello-world/salvo/src/: main.rs
benchmark/hello-world/thruster/: Cargo.toml
benchmark/hello-world/thruster/src/: main.rs
benchmark/hello-world/tide/: Cargo.toml
benchmark/hello-world/tide/src/: main.rs
benchmark/hello-world/viz/: Cargo.toml
benchmark/hello-world/viz/src/: main.rs
benchmark/hello-world/warp/: Cargo.toml
benchmark/hello-world/warp/src/: main.rs
frameworks/: Cargo.toml
frameworks/actix-web-hello-world/: Cargo.toml
frameworks/axum-hello-world/: Cargo.toml
frameworks/axum-hello-world-st/: Cargo.toml
frameworks/axum-hello-world/src/: main.rs
frameworks/hyper-hello-world/: Cargo.toml
frameworks/hyper-hello-world-st/: Cargo.toml
frameworks/hyper-hello-world-st/src/: main.rs
frameworks/hyper-hello-world/src/: main.rs
result/: hello-world.md
result/csv/: csv.md  csv.sh  csv.stdout
result/hello-world/: hello-world.md  hello-world.sh  hello-world.stdout
results/: hello-world.md  results  run.sh
(+5 files in other folders)
