[workspace]

members = [
    "hello-world/actix-web",
    "hello-world/astra",
    "hello-world/axum",
    "hello-world/hyper",
    "hello-world/ntex",
    "hello-world/rocket",
    "hello-world/salvo",
    "hello-world/thruster",
    "hello-world/tide",
    "hello-world/warp",
    "hello-world/poem",
    "hello-world/viz"
]
