[package]
name = "hyper-hello-world-st"
version = "0.1.0"
authors = ["Programatik <programatik29@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.9.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
hyper = { version = "0.14.11", features = ["runtime", "server", "http1", "http2"] }
num_cpus = "1.13.0"
