[package]
name = "hello-world-hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.2", features = ["tokio"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
